<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/us_tips"
        android:textColor="#666666" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#f2f2f2"
        android:drawableRight="@drawable/head_"
        android:hint="@string/pls_us"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black" />

    <com.vickyleu.library.Base.View.DrawablePassword
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#fdfdfd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/pw_tips"
        android:textColor="#666666" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#f2f2f2"
        android:drawableRight="@drawable/pass_tips_"
        android:hint="@string/pls_pw"
        android:inputType="textPassword"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.5"
        android:gravity="right"
        android:text="@string/forget_pw"
        android:textColor="#666666" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1.6"
        android:background="#84ccc9"
        android:gravity="center"
        android:text="@string/submit_button"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>