<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/phone_text"
        android:textColor="#666666" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#f2f2f2"
        android:hint="@string/normal_phone_text"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/captcha"
        android:textColor="#666666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.4"
            android:background="#f2f2f2"
            android:hint="@string/captcha"
            android:inputType="textCapCharacters"
            android:maxLength="8"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="#84ccc9"
            android:text="@string/receive_captcha"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1.6"
        android:background="#84ccc9"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>